deploy/namespaces/airflow/netpol/04-allow-egress-to-istiod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-istiod
  namespace: airflow
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
          podSelector:
            matchLabels:
              app: istiod
              istio: pilot
      ports:
        - protocol: TCP
          port: 15010
        - protocol: TCP
          port: 15012
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 15014
