deploy/namespaces/airflow/netpol/04-allow-traefik-to-airflow-ui.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-to-airflow-ui
  namespace: airflow
spec:
  podSelector:
    matchLabels:
      component: api-server
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - protocol: TCP
      port: 8080
