deploy/namespaces/airflow/netpol/07-allow-airflow-internal-tcp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: airflow-internal-tcp
  namespace: airflow
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - podSelector: {}

  egress:
  - to:
    - podSelector: {}
