deploy/namespaces/airflow/netpol/09-allow-kube-api-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-api-egress
  namespace: airflow
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.2.88/32
    ports:
    - protocol: TCP
      port: 6443
