deploy/namespaces/airflow/netpol/11-airflow-egress-ingestion.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: airflow-egress-ingestion
  namespace: airflow
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: pompetrack-core
    ports:
    - protocol: TCP
      port: 80
